# kalshi_weather_sniper

./: .env.example  .env.live.example  .gitignore  README.md  pyproject.toml  setup.py
config/: arb-sniper-crypto-btc15m-live.yaml  arb-sniper-crypto-btc5m-live.yaml  arb-sniper-crypto-eth15m-live.yaml  arb-sniper-crypto-eth5m-live.yaml  arb-sniper-crypto-sol15m-live.yaml  arb-sniper-crypto-sol5m-live.yaml  arb-sniper-live.yaml  arb-sniper-weather-austin-live.yaml  arb-sniper-weather-chicago-live.yaml  arb-sniper-weather-denver-live.yaml  arb-sniper-weather-hong-kong-live.yaml  arb-sniper-weather-london-live.yaml  arb-sniper-weather-lucknow-live.yaml  arb-sniper-weather-mexico-city-live.yaml  arb-sniper-weather-seoul-live.yaml  arb-sniper-weather-shanghai-live.yaml  arb-sniper-weather-tokyo-live.yaml  arb-sniper-weather-wellington-live.yaml  backtest.yaml  binance_multiframe_trend_5m.yaml  binary_arb.yaml  copytrade-watchlist.yaml  crypto-passive-mm-btc15m-live.yaml  kalshi-weather-sniper-live.yaml  live.yaml  nwws-weather-lock-prism3.targets.example.json  paper.yaml  supervisor-lightgbm-live.yaml  supervisor-live.yaml  supervisor.yaml  weather-outlier-sniper-amsterdam-live.yaml  weather-outlier-sniper-ankara-live.yaml  weather-outlier-sniper-atlanta-live.yaml  weather-outlier-sniper-austin-live.yaml  weather-outlier-sniper-beijing-live.yaml  weather-outlier-sniper-buenos-aires-live.yaml  weather-outlier-sniper-busan-live.yaml  weather-outlier-sniper-cape-town-live.yaml  weather-outlier-sniper-chengdu-live.yaml  weather-outlier-sniper-chicago-live.yaml  (+40 more)
infra/: README.md  (+2 more)
(+141 files in other folders)
