[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot"
version = "0.0.1"
description = "Polymarket trading bot on Nautilus Trader — pluggable strategies, backtest/paper/live parity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "papenshtross" }]
dependencies = [
    "nautilus_trader>=1.200.0,<1.222.0",
    "asyncpg>=0.29",
    "web3>=6.0.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "cryptography>=42",
    "uvloop>=0.19; platform_system == 'Linux'",
]

[project.optional-dependencies]
live = [
    "py-clob-client-v2>=1.0.0",
    "py-order-utils>=0.3.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["polybot*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
